Fix dark mode styling issues

--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
+  /* display: flex; */
   place-items: start;
   min-width: 320px;
   min-height: 100vh;
